# advent-of-code

./: .gitignore
2023/: .pre-commit-config.yaml  README.md  day01.py  pyproject.toml  test_day01.py
2023/aoc/: day01.py  day02.py  day03.py  day04.py  day08.py  infra.py
2023/aoc/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day09.py
2023/python/: pyproject.toml
2023/python/aoc/: day02.py  day03.py  day04.py  day09.py  day11.py
2023/python/aoc/tests/: test_day02.py  test_day03.py  test_day08.py  test_day11.py
2024/: pyproject.toml
2024/solutions/: 01.py  02.py  04.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py
2024/solutions/shared/: __init__.py  directions.py  point.py  vector.py
2024/tests/: test_04.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py
