[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "My solutions for Advent of Code 2023"
authors = ["Florian Holzner <bobschi@lebobs.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
advent-of-code-data = "^2.0.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
