[tool.poetry]
name = "aoc-2024"
version = "0.0.1"
description = ""
authors = ["Florian Holzner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-typer = "^0.0.13"


[tool.poetry.group.dev.dependencies]
advent-of-code-data = "^2.0.4"
browser-cookie3 = "^0.19.1"
typer = "^0.14.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
